Contact Us: * Added our contact information, previously it was for Microsoft.

--- a/WebApplicationDevelopment/Views/Home/Contact.cshtml
+++ b/WebApplicationDevelopment/Views/Home/Contact.cshtml
@@ -1,17 +1,23 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>Contact Bull Market Analysis:</h2>
+<h3>Please contact us with any comments or questions, we value your feedback.</h3>
+<br />
 
+<h4>
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    Bull Market Analysis<br />
+    c/o Boston University<br />
+    One Silber Way<br />
+    Boston, MA 02215<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    617.555.5555
 </address>
 
+<br />
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:Support@BullMarketAnalysis.com">Support@BullMarketAnalysis.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@BullMarketAnalysis.com">Marketing@BullMarketAnalysis.com</a>
 </address>
+</h4>
