--- a/WebApplicationDevelopment/Views/Account/MyAccounts.cshtml
+++ b/WebApplicationDevelopment/Views/Account/MyAccounts.cshtml
@@ -6,9 +6,12 @@
 @using Owin;
 @{
     var db = Database.Open("StocksDBContext");
-    var selectQueryString = "SELECT Id, Symbol, PricePaid, SharesPurchase, PriceSold FROM portfolio WHERE UserId = '" + User.Identity.GetUserId() + "' ORDER BY Symbol"; 
-    var results = db.Query(selectQueryString);
-    var jaysahn = Json.Encode(results);
+    var selectPortfolioQueryString = "SELECT Id, Symbol, PricePaid, SharesPurchase, PriceSold FROM portfolio WHERE UserId = '" + User.Identity.GetUserId() + "' ORDER BY Symbol";
+    var portfolioResults = db.Query(selectPortfolioQueryString);
+    var portfolioJaysahn = Json.Encode(portfolioResults);
+    var selectWatchlistQueryString = "SELECT Id, Symbol FROM watchlist WHERE UserId = '" + User.Identity.GetUserId() + "' ORDER BY Symbol";
+    var watchlistResults = db.Query(selectWatchlistQueryString);
+    var watchlistJaysahn = Json.Encode(watchlistResults);
     ViewBag.Title = "Manage Your Account";
 }
 <h2>@ViewBag.Title.</h2>
@@ -65,6 +68,37 @@
         </div> <!--End of panel-->
 
         <!----------------------Previously Stocks Owned/Sold/Removed -------------------->
+        <div class="panel panel-default panel-warning">
+            <div class="panel-heading">
+                Watchlist:
+            </div>
+
+            <div class="panel-body">
+                <table class="table table-striped table-hover ">
+                    <headertemplate>
+                        <!-----------------------Table Headings----------------------------->
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Symbol</th>
+                                <th>Current Price</th>
+                                <th>Day's Change</th>
+                                <th>Volume</th>
+                                <th>Move to Portfolio</th>
+                                <th>Remove</th>
+                            </tr>
+                        </thead>
+                    </headertemplate>
+                    <tbody id="watchlist_table_body">
+                        <tr>
+                            <td colspan="11">No stocks to display</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div> <!--End of panel body-->
+        </div> <!--End of panel-->
+
+        <!----------------------Previously Stocks Owned/Sold/Removed -------------------->
         <div class="panel panel-default panel-danger">
             <div class="panel-heading">
                 Stocks Previously Owned:
@@ -114,12 +148,21 @@
 
 </div> <!--End of all tabs-->
 <script type="text/javascript">
-    var portfolioItems = eval(@Html.Raw(jaysahn));
+    var portfolioItems = eval(@Html.Raw(portfolioJaysahn));
     var portfolioSymbols = new Array();
     for (var i = 0; i < portfolioItems.length; i++) {
         portfolioSymbols[i] = portfolioItems[i].Symbol;
     }
     if (portfolioSymbols.length > 0) {
         refreshPortfolio(portfolioSymbols);
+    }
+
+    var watchlistItems = eval(@Html.Raw(watchlistJaysahn));
+    var watchlistSymbols = new Array();
+    for (var i = 0; i < watchlistItems.length; i++) {
+        watchlistSymbols[i] = watchlistItems[i].Symbol;
+    }
+    if (watchlistSymbols.length > 0) {
+        refreshWatchlist(watchlistSymbols);
     }
 </script>
