organize js files a little better
break js into separate files by functional area and hide quote info when
added to portfolio or watchlist

--- a/WebApplicationDevelopment/Views/Shared/_Layout.cshtml
+++ b/WebApplicationDevelopment/Views/Shared/_Layout.cshtml
@@ -8,6 +8,10 @@
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/Scripts/stock.lookup.js")
+    @Scripts.Render("~/Scripts/stock.quote.js")
+    @Scripts.Render("~/Scripts/stock.portfolio.js")
+    @Scripts.Render("~/Scripts/stock.watchlist.js")
+    @Scripts.Render("~/Scripts/stock.utils.js")
 
 </head>
 <body>
